--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,12 +8,14 @@ authors = [{ name = "Elkhn", email = "elxana@azercell.com" }]
 dependencies = [
     "fastapi>=0.116.1",
     "openpyxl>=3.1.5",
-    # runtime deps go here, e.g. "pandas>=2.2"
     "pandas>=2.3.1",
     "python-multipart>=0.0.20",
     "scikit-learn>=1.7.1",
     "uvicorn>=0.35.0",
+    "joblib>=1.4.2",
+    "xgboost>=2.1.1"
 ]
+
 
 # [tool.ruff]
 # lint.extend-select = ["ALL"]
