--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,33 @@
 version: "3.8"
-      
+
 services:
   backend:
     build:
       context: .
       dockerfile: backend/Dockerfile
+    container_name: backend
     networks:
       - safe_networks
     restart: always
-    image: backend
-    container_name: backend
     volumes:
       - ./backend:/app
-      - backend_venv:/app/.venv
     ports:
       - "8000:8000"
-  
+
   frontend:
     build:
       context: .
       dockerfile: frontend/Dockerfile
+    container_name: frontend
     networks:
       - safe_networks
     restart: always
-    image: frontend
-    container_name: frontend
     volumes:
       - ./frontend:/app
-      - frontend_venv:/app/.venv
     ports:
       - "8501:8501"
-
-
-volumes:
-  backend_venv:
-  frontend_venv:
+    environment:
+      - BACKEND_URL=http://backend:8000
 
 networks:
   safe_networks:
