--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,18 @@
-FROM ghcr.io/astral-sh/uv:bookworm-slim AS builder
-
-ENV UV_COMPILE_BYTECODE=1 \
-    UV_LINK_MODE=copy \
-    UV_PYTHON_INSTALL_DIR=/python \
-    UV_PYTHON_PREFERENCE=only-managed
-
-# Install build dependencies and clean up in the same layer
-RUN apt-get update -y && \
-    apt-get install --no-install-recommends -y clang git && \
-    rm -rf /var/lib/apt/lists/*
+FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy only backend code
-COPY backend/ .
+# Install system deps
+RUN apt-get update -y && \
+    apt-get install --no-install-recommends -y gcc && \
+    rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
-RUN uv sync --no-dev
+# Copy frontend code
+COPY frontend/ .
 
-# Set environment variables for production
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+# Install deps
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose 8501 port
 EXPOSE 8501
 
-# Run streamlit application 
-CMD ["uv", "run", "streamlit", "run", "app.py"]
+CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
