--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -6,13 +6,14 @@ readme = "README.md"
 requires-python = ">= 3.12"
 authors = [{ name = "Elkhn", email = "elxana@azercell.com" }]
 dependencies = [
-    "openpyxl>=3.1.5",       
-    "pandas>=2.3.1",         
-    "numpy>=1.26.0",         
-    "streamlit>=1.48.1",     
-    "requests>=2.31.0",      
-    "matplotlib>=3.9.0",     
-    "plotly>=5.22.0",        
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.1",
+    "numpy>=1.26.0",
+    "streamlit>=1.48.1",
+    "requests>=2.31.0",
+    "matplotlib>=3.9.0",
+    "plotly>=5.22.0",
+    "pyarrow>=16.0.0",
 ]
 
 # [tool.ruff]
